--- a/Ambush/packages.config
+++ b/Ambush/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Device.Net" version="2.7.0" targetFramework="net461" />
+  <package id="Device.Net.LibUsb" version="2.7.0" targetFramework="net461" />
   <package id="EasyModbusTCP" version="5.5.0" targetFramework="net461" />
+  <package id="LibUsbDotNet" version="2.2.29" targetFramework="net461" />
+  <package id="libusb-win32-driver" version="1.2.6.0" targetFramework="net461" />
 </packages>
