Splash screen added

--- a/Ambush/Ambush.csproj
+++ b/Ambush/Ambush.csproj
@@ -271,6 +271,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <SplashScreen Include="Images\LOGO-AMBUSH.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
