--- a/Ambush/Ambush.csproj
+++ b/Ambush/Ambush.csproj
@@ -117,6 +117,7 @@
     <Compile Include="CustomEventArgs\TargetStateChangeArgs.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Profiles\IProfile.cs" />
+    <Compile Include="Python Scripts\Class1.cs" />
     <Compile Include="Server\ServerRequestHandler.cs" />
     <Compile Include="Timers\UpdateGUITimer.cs" />
     <Compile Include="UserControls\AdminSettings.xaml.cs">
@@ -274,8 +275,6 @@
   <ItemGroup>
     <SplashScreen Include="Images\LOGO-AMBUSH.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Python Scripts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
